re-written method for calibrating hyper regularizations coefficients (coefs slightly updated, and now stored in include/regcalib.f90)

--- a/src/Makefile
+++ b/src/Makefile
@@ -95,7 +95,7 @@ specfabpy: $(SPECFAB).o
 	@mv -f specfabpy.cpython* $(PATHSPECFABPY)/
 
 python: specfabpy
-	python setup.py install
+	python3 setup.py install --user
 
 #-------------------
 
