update eigenframe ordering of to mi[node,i,xyz], added irreducible a2 and a4 forms, enhancementfactor fenics routine might need fixing after this update (todo).

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,19 @@ cython_debug/
 *.exe
 *.out
 *.app
+
+#-------------
+# My additions
+#-------------
+mathematica/
+litterature-pdfs/
+lapack-3.10.0/
+BLAS-3.10.0
+*.aux
+*.synctex.gz
+*_old*
+*-old*
+*_bck*
+*-bck*
+*(copy)*
+*(another copy)*
